# self_learning_agent

./: .env.example  .gitignore  CLAUDE.md  CODE.md  CONTEXT.md  OPERATIONS.md  OVERVIEW.md  PRD.md  RUBRIC.md  pyproject.toml
.claude/: settings.local.json
.scratch/issues/: 001-collapse-to-single-agent.md  002-prefactor-runner-artifact-seam.md  003-collapse-to-single-agent.md  004-interview-extension.md  005-offline-eval-harness.md  006-behavioral-tests-through-seam.md  007-retire-superseded-docs.md
docs/: config.md  rubric-zh-readonly.md  智能体评价体系.csv
docs/adr/: 0001-structured-pedagogy-graph.md  0002-lesson-feedback-placement.md  0003-files-as-source-of-truth.md  0004-api-only-product-no-identity.md  0005-single-graph-no-supervisor.md  0006-lesson-authoring-node.md  0007-minimal-tools-swappable-search.md  0008-langsmith-for-dev-observability.md  0009-failure-posture-refuse-not-degrade.md  0010-turn-cascade-in-graph-edges.md  0011-first-lesson-menu-and-new-topic-handoff.md  0012-explicit-memory-layer.md  0013-workspace-language-detected-once.md  0014-validation-rubric-promptfoo.md  0015-eval-standalone-dual-transport-agent-sut.md  0016-langfuse-for-observability.md  0017-eval-two-stage-golden-corpus.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scoring/samples/: 0001-strong-sample.html  0002-medium-sample.html  0003-weak-sample.html  manifest.json
src/self_learning_agent/: __init__.py  api.py  assessment.py  cli.py  config.py  graph.py  language.py  lesson.py  mission.py  models.py  new_topic.py  observability.py  prompts.py  reference.py  (+11 more)
